<resources>
    <string name="entrainement">Entrainement</string>
    <string name="hub">HUB</string>
    <string name="my_ai">MY IA</string>
    <string name="profile">Profile</string>
    <string name="Hub11">calendar</string>
    <string name="entrainement_title">Entrainement</string>
    <string name="nom_entrainement1">Entrainement N1</string>
    <string name="todo">TODO</string>
    <string name="note">NOTE\n</string>
    <string name="prompt_empty_error">ERROR (1car min)</string>
    <string name="user_input_hint">Poser vos question</string>
    <string name="send">Envoyer</string>
    <string name="meditation">Meditation</string>
    <string name="send_button_description">ENVOYER</string>
    <string name="user_input_description">Vous avez besoin d\'information ?</string>
    <string name="add_task">Ajouter un objectif</string>
    <string name="description_entrainement">Un ptit entrainement ?</string>
    <string name="app_name">Shinka</string>
    <string name="task_reminder">Rappel de Tâche</string>
    <string name="calendar">Calendrier</string>
    <string name="error_message">Erreur</string>
    <string name="action_confirm">Confirmer</string>
    <string name="action_cancel">Annuler</string>
    <string name="welcome_message">Bienvenue dans Shinka</string>
    <string name="ajouter_une_tache">Ajouter une tache</string>
    <string name="rappels_de_t_ches">Rappels de Tâches</string>
    <string name="task_title_hint">Quelle tache voulez vous ajouter</string>
    <string name="prenom_nom">Prenom Nom</string>
    <string name="profile_picture">Profile</string>
    <string name="time_trained">Time trained\n0 hr 0 min</string>
    <string name="daily_streak">Jours a la Suite\n0 jours</string>$
</resources>